--- a/devlink/global.css
+++ b/devlink/global.css
@@ -2201,3 +2201,20 @@ p {
   margin-bottom: 10px;
   font-weight: 600;
 }
+
+.w-layout-blockcontainer {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 940px;
+}
+@media screen and (max-width: 991px) {
+  .w-layout-blockcontainer {
+    max-width: 728px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .w-layout-blockcontainer {
+    max-width: none;
+  }
+}
